--- a/assets/_infos.scss
+++ b/assets/_infos.scss
@@ -1,5 +1,5 @@
 #infos{
-    //overflow: hidden;
+    // overflow: hidden;
     .slide-l{
         display: grid;
         grid-template-columns: repeat(2, 50vw);
@@ -31,6 +31,7 @@
             }
         }
         #info1, #info2{
+            overflow: hidden;
             .overlay{
                 flex: 0.5;
                 @include container;
