--- a/assets/_menu.scss
+++ b/assets/_menu.scss
@@ -3,6 +3,7 @@
     align-items: $align;
     justify-content: $justify;
     flex-direction: $direction;
+    flex-wrap: wrap;
     background-color: $background;
     padding-left: $padding;
     li{
@@ -13,6 +14,7 @@
             font-size: $textXs;
             font-weight: $light;
             text-transform: uppercase;
+            display: block;
             &:hover{
                 color: $gotham;
             }
