--- a/assets/_text.scss
+++ b/assets/_text.scss
@@ -13,4 +13,5 @@ strong{
     font-weight: $fweight;
     text-transform: $transform;
     color: $color;
+    word-wrap: break-word;
 }
