--- a/public/style.css
+++ b/public/style.css
@@ -15,6 +15,8 @@
 .slide-xs, .slide-s, .slide-sm, .slide-m, .slide-l, .slide {
   width: 100%;
   position: relative;
+  resize: both;
+  overflow: auto;
 }
 
 .slide-xs {
@@ -58,6 +60,7 @@ header nav ul {
   align-items: center;
   justify-content: left;
   flex-direction: row;
+  flex-wrap: wrap;
   background-color: #1E1E1E;
   padding-left: 2rem;
 }
@@ -70,6 +73,7 @@ header nav ul li a {
   font-size: 0.8rem;
   font-weight: 300;
   text-transform: uppercase;
+  display: block;
 }
 header nav ul li a:hover {
   color: #E5C65A;
@@ -164,6 +168,7 @@ header #burger .bar:nth-child(even) {
   font-weight: 900;
   text-transform: uppercase;
   color: #1E1E1E;
+  word-wrap: break-word;
 }
 #home .text p {
   letter-spacing: 0.09em;
@@ -173,6 +178,7 @@ header #burger .bar:nth-child(even) {
   font-weight: 400;
   text-transform: none;
   color: #1E1E1E;
+  word-wrap: break-word;
 }
 #home .callto {
   border-left: 1px solid #1E1E1E;
@@ -263,7 +269,11 @@ header #burger .bar:nth-child(even) {
   font-weight: 700;
   text-transform: uppercase;
   color: #FFFFFF;
+  word-wrap: break-word;
   padding: 0 2rem 0 2rem;
+}
+#infos .slide-l #info1, #infos .slide-l #info2 {
+  overflow: hidden;
 }
 #infos .slide-l #info1 .overlay, #infos .slide-l #info2 .overlay {
   flex: 0.5;
@@ -325,6 +335,7 @@ header #burger .bar:nth-child(even) {
 }
 #story .slide-l {
   overflow: hidden;
+  /* slideshow controls */
 }
 #story .slide-l .overlay {
   padding: 2rem 0;
@@ -343,6 +354,7 @@ header #burger .bar:nth-child(even) {
   font-weight: 900;
   text-transform: uppercase;
   color: #1E1E1E;
+  word-wrap: break-word;
   text-align: center;
   padding-bottom: 1rem;
 }
@@ -354,6 +366,7 @@ header #burger .bar:nth-child(even) {
   font-weight: 400;
   text-transform: none;
   color: #1E1E1E;
+  word-wrap: break-word;
 }
 #story .slide-l .overlay .prev, #story .slide-l .overlay .next {
   position: absolute;
@@ -405,7 +418,7 @@ header #burger .bar:nth-child(even) {
   flex-direction: column;
   justify-content: space-between;
   align-items: start;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
 }
 #contact footer .container .menu nav {
   padding-bottom: 1rem;
@@ -415,6 +428,7 @@ header #burger .bar:nth-child(even) {
   align-items: start;
   justify-content: center;
   flex-direction: column;
+  flex-wrap: wrap;
   background-color: rgba(0, 0, 0, 0);
   padding-left: 0;
   width: 100%;
@@ -428,6 +442,7 @@ header #burger .bar:nth-child(even) {
   font-size: 0.8rem;
   font-weight: 300;
   text-transform: uppercase;
+  display: block;
 }
 #contact footer .container .menu nav ul li a:hover {
   color: #E5C65A;
@@ -443,6 +458,7 @@ header #burger .bar:nth-child(even) {
   font-weight: 300;
   text-transform: uppercase;
   color: #6C6C6C;
+  word-wrap: break-word;
 }
 #contact footer .container .menu .adress p {
   letter-spacing: 0.09em;
@@ -452,6 +468,7 @@ header #burger .bar:nth-child(even) {
   font-weight: 400;
   text-transform: none;
   color: #E5C65A;
+  word-wrap: break-word;
 }
 #contact footer .container .text form {
   display: flex;
@@ -461,7 +478,6 @@ header #burger .bar:nth-child(even) {
   flex-wrap: wrap;
 }
 #contact footer .container .text form #email {
-  width: 10rem;
   background-color: #1E1E1E;
   box-shadow: 0px 0px 0px 1px #D9D9D9 inset;
 }
@@ -501,6 +517,7 @@ header #burger .bar:nth-child(even) {
   font-weight: 300;
   text-transform: uppercase;
   color: #F2F2F2;
+  word-wrap: break-word;
 }
 #contact .copyright {
   display: flex;
@@ -518,6 +535,7 @@ header #burger .bar:nth-child(even) {
   font-weight: 300;
   text-transform: none;
   color: #6C6C6C;
+  word-wrap: break-word;
 }
 
 /* MediaQueries */
@@ -527,14 +545,6 @@ header #burger .bar:nth-child(even) {
   }
 }
 @media all and (max-width: 424.98px) {
-  .slide-xs,
-  .slide-s,
-  .slide-sm,
-  .slide-m,
-  .slide-l,
-  .slide {
-    height: max-content;
-  }
   header nav {
     display: none;
   }
@@ -542,14 +552,15 @@ header #burger .bar:nth-child(even) {
     display: block;
   }
   #home .slide-sm {
+    height: max-content;
     flex-direction: column;
   }
   #home .slide-sm .text {
     width: 100%;
     padding-bottom: 1rem;
   }
-  #infos .slide-l {
-    height: 100vh;
+  #contact .slide-sm {
+    height: max-content;
   }
   #contact .container {
     gap: 0 3rem;
@@ -573,6 +584,7 @@ header #burger .bar:nth-child(even) {
 }
 @media all and (max-width: 767.98px) {
   #infos .slide-l {
+    height: 100vh;
     display: flex;
     flex-direction: column;
   }
@@ -592,7 +604,7 @@ header #burger .bar:nth-child(even) {
     width: 60vw;
     margin: 1.5rem auto;
   }
-  #story .slide-l img {
+  #story .slide-l #imgStory {
     width: 100%;
     height: auto;
   }
